[project]
name = "caching-proxy-fastapi"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "redis>=7.1.0",
    "typer>=0.20.1",
    "uvicorn>=0.40.0",
]

[project.scripts]
caching-proxy = "main:app"

[tool.setuptools]
py-modules = ["main", "server"]
